Color adjusSpacing adjustment, color correction

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 html {
     min-height: 100%;
-    margin: 0;
+    margin-top: -20px;
+    margin-bottom: -20px;
     padding: 0;
 
 }
@@ -213,12 +214,7 @@ main {
 
 /* FOOTER */
 .copyright {
-    color: rgba(1, 48, 48, 0.543);
-    font-size: .7rem;
-}
-.disclaimer {
-    font-size: .6rem;
-     color: rgba(1, 48, 48, 0.543);
+    color: rgba(1, 48, 48, 0.8);
 }
 
 footer {
